# EXXA

./: README.md
ATMOSPHERE_CHARACTERIZATION/: readme.md
DENOISING_DIFFUSION/: GSOC_2025_EXXA_Main.ipynb
DUST_CONTINUUM_APPROCH/: README.md
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/: __main__.py  models.py  rl_agent.py
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/: README.md  pyproject.toml  requirements.txt
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/src/dataset/: dataset.py
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/src/models/: models.py
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/src/notebooks/: equivariant-hybrid-approach.ipynb  metalearner-on-vgg16-base-models.ipynb  save_predictions.ipynb  steerable-approach.ipynb  voting-classifiers.ipynb
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/src/planetary_disk_planet_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
EQUIVARIANT_NETWORKS_PLANETARY_SYSTEMS_ARCHITECTURES/final_submission/src/utilities/: metadata.py  metrics.py  training.py
FOUNDATION_MODELS_FOR_EXOPLANET_CHARACTERIZATION/: README.md
KINEMATIC_APPROACH/: README.md
MIHIR_SIMULATED_DATA/: README.md  imager.ipynb
NEURAL_NETWORK_CLASSIFIER/: Binary_Classifier_V1  readme.md
QUANTUM_MACHINE_LEARNING_FOR_ATMOSPHERIC_CHARACTERIZATON/: README.md
QUANTUM_MACHINE_LEARNING_FOR_EXOPLANET_CHARACTERIZATION/: README.md
TIME_SERIES_APPROACH/: readme.md
(+2174 files in other folders)
